# knowledge-link

./: .gitignore  README.md
backend/: config.py  database.py  embeddings.py  main.py  models.py  pyproject.toml  scraper.py  vector_db.py
backend/app/: __init__.py  main.py
backend/app/config/: config.py
backend/app/routes/: auth.py  links.py  models.py
backend/app/services/: embeddings.py  link_service.py  summary_service.py
backend/app/utils/: __init__.py  database.py  session_store.py  vector_db.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: links.js
frontend/src/components/: AddLinkModal.css  AddLinkModal.jsx  LandingPage.css  LandingPage.jsx  LinkForm.css  LinkForm.jsx  LinkList.css  LinkList.jsx  LinksSidebar.css  LinksSidebar.jsx  MainApp.css  MainApp.jsx  ProtectedRoute.jsx  SearchBar.css  SearchBar.jsx  SearchResults.css  SearchResults.jsx
frontend/src/context/: AuthContext.jsx
